BarDropdown AntDesign Fixes / Z-Index 1 for Layout Header

--- a/Source/Blazorise.AntDesign/Styles/_layout.scss
+++ b/Source/Blazorise.AntDesign/Styles/_layout.scss
@@ -1,3 +1,8 @@
 ﻿.b-layout-header {
     line-height: 64px;
 }
+
+.b-layout-header {
+    z-index:1;
+}
+
